# vasanth-experiments

./: .gitignore  AWS_EKS_DEPLOYMENT_GUIDE.md  EKS_DEPLOYMENT_README.md  EKS_IMPLEMENTATION_SUMMARY.md  EKS_QUICK_START.md  K8S_SECRETS_SETUP.md  README.md  docker-compose.yml
.github/workflows/: deploy-to-eks.yml
fastapi-s3-upload/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
fastapi-s3-upload/app/: __init__.py  main.py
fastapi-s3-upload/app/config/: settings.py
fastapi-s3-upload/app/models/: schemas.py
fastapi-s3-upload/app/routes/: upload.py
fastapi-s3-upload/app/services/: s3_service.py
k8s/: fastapi.yaml  ingress.yaml  react.yaml
scripts/: eks-helper.sh
voice-you/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  nginx.conf  package-lock.json  package.json
voice-you/public/: index.html
voice-you/src/: App.js
voice-you/src/components/: Navigation.js  VoiceRecorder.js
voice-you/src/pages/: Home.js  Voices.js  YourVoice.js
voice-you/src/services/: s3Service.js
